# QEq-REANN

./: LICENSE  readme.docx
Qeq-REANN Fortran interface/reann-testen/src/: test.f90
Qeq-REANN Fortran interface/reann-testen/src/interfaces/: pes_c.h  pes_cpp.hpp
Qeq-REANN_core/cha/: PES.py
Qeq-REANN_core/cha/example/: gpu_sel.py
Qeq-REANN_core/qeq/: script_PES.py
code/Qeq-REANN Fortran interface/: input_reann
code/Qeq-REANN Fortran interface/reann-testch/src/interfaces/: pes_cpp.hpp
code/Qeq-REANN Fortran interface/reann-testch_omp/src/: CMakeLists.txt  test.f90
code/Qeq-REANN Fortran interface/reann-testch_omp/src/interfaces/: CMakeLists.txt  pes_c.cpp  pes_cpp.cpp  pes_cpp.hpp
code/Qeq-REANN Fortran interface/reann-testen/: README
code/Qeq-REANN Fortran interface/reann-testen/cmake/: CMakeLists.txt
code/Qeq-REANN Fortran interface/reann-testen/src/: CMakeLists.txt
code/Qeq-REANN_core/run/: train.py
code/Qeq-REANN_core/src/: Property_qeq.py  get_batchneigh.py
core/Qeq-REANN Fortran interface/reann-testch/: README
core/Qeq-REANN Fortran interface/reann-testch/src/: CMakeLists.txt  test.f90
core/Qeq-REANN Fortran interface/reann-testch/src/interfaces/: CMakeLists.txt  pes_c.h  pes_cpp.cpp  pes_f.f90
core/Qeq-REANN Fortran interface/reann-testen/src/interfaces/: CMakeLists.txt  pes_c.cpp  pes_cpp.cpp  pes_f.f90
core/Qeq-REANN_core/cha/: script_PES.py
core/Qeq-REANN_core/inference/: get_neigh.py
core/Qeq-REANN_core/qeq/: PES.py
core/Qeq-REANN_core/src/: Property_CHA.py  Property_DM.py  dataloader.py  get_neighbour.py  optimize.py  read.py
mdData/: COX-1.txt  COX-2.txt  R513.txt  Source Data.xlsx
model/chs/: REANN_CHA_DOUBLE.pt  jobSubmit.sh  nn.err
model/chs/para/: input_density  input_nn
model/pes/: REANN_PES_DOUBLE.pt  jobSubmit.sh  nn.err
model/pes/para/: input_density  input_nn
