cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

project(recipe LANGUAGES Fortran CXX)

SET(CMAKE_CXX_RELEASE_FLAGS "$ENV{CXXFLAGS} -O3 -Wall -Wextra")
SET(CMAKE_Fortran_FLAGS_RELEASE "-Wall -Wextra -lstdc++ -cpp -O3")

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF CACHE BOOL "Use compiler extensions")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin)
set(CMAKE_Fortran_MODULE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/modules)

message(STATUS "CMAKE_CURRENT_BINARY_DIR:  ${CMAKE_CURRENT_BINARY_DIR}")
message(STATUS "CMAKE_CURRENT_SOURCE_DIR:  ${CMAKE_CURRENT_SOURCE_DIR}")

get_filename_component(REANN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/.. ABSOLUTE)

set(REANN_SOURCE_DIR ${REANN_DIR}/src)
add_subdirectory(${REANN_SOURCE_DIR} ./trash)
